--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://AhmedEzzat2021.github.io/reactDashboard/",
+  "homepage": "http://AhmedEzzat2021.github.io/react-dashboard/",
   "name": "react-dashboard",
   "version": "0.1.0",
   "private": true,
